--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ color: #FFFFFF;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: var(--main-color);
+    background-color: #2196f3);
     
 }
  .hero-btn:hover, .hero-btn:focus {
