--- a/css/style.css
+++ b/css/style.css
@@ -113,11 +113,11 @@ color: #FFFFFF;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    background-color: #2196f3);
+    color: #2196F3);
     
 }
  .hero-btn:hover, .hero-btn:focus {
-    color: #2196F3;
+   background-color: #188CE8;
  }
 
                       /*Hiden*/
