--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ color: #FFFFFF;
     /* identical to box height, or 188% */
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: none;
     letter-spacing: 0.06em;
      background-color: #2196F3;
     
