--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ color: #FFFFFF;
     align-items: center;
     text-decoration: none; 
     letter-spacing: 0.06em;
+    color: #FFFFFF;
      background-color: #2196F3;
     
 }
